--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babel-loader": "^9.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
