--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@babel/preset-react": "^7.23.3",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.3",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "babel-loader": "^9.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "webpack": "^5.90.3",
